--- a/app/src/main/res/layout/fragment_detalle_evento.xml
+++ b/app/src/main/res/layout/fragment_detalle_evento.xml
@@ -6,65 +6,300 @@
     tools:context="com.ammacias.tectium.Fragments.DetalleEventoFragment">
 
 
-<LinearLayout android:orientation="vertical"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        app:layoutManager="LinearLayoutManager" />
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
+            android:layout_width="368dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:id="@+id/cardView">
+
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <co.lujun.androidtagview.TagContainerLayout
-                android:id="@+id/tagcontainerLayout1"
-                android:layout_width="match_parent"
+            <EditText
+                android:id="@+id/precio"
+                android:inputType="number"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="0dp"
-                android:padding="10dp"
-                app:container_enable_drag="true"
-                app:horizontal_interval="10dp"
-                app:tag_clickable="true"
-                app:vertical_interval="10dp"
-                app:tag_enable_cross="true"
-                app:container_background_color="#00000000"
-                app:container_border_color="#3300ff00"
-                app:container_border_radius="0dp"
-                app:container_border_width="4dp"
-                app:tag_theme="random"
-                />
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:text="19"
+                app:layout_constraintLeft_toRightOf="@+id/img_precio"
+                app:layout_constraintTop_toTopOf="@+id/img_precio"
+                android:layout_marginStart="8dp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <EditText
+                android:id="@+id/fecha"
+                android:inputType="datetime"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:text="07/07/2017 08:00"
+                app:layout_constraintLeft_toRightOf="@+id/img_fecha"
+                app:layout_constraintTop_toTopOf="@+id/img_fecha"
+                android:layout_marginStart="8dp" />
 
-                <Spinner
-                    android:id="@+id/text_tag"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"/>
+            <!--<ImageView
+                android:id="@+id/compartir"
+                android:layout_width="34dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toRightOf="@+id/fav"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@mipmap/ic_launcher_round"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />-->
 
-                <Button
-                    android:id="@+id/btn_add_tag"
+            <!--<ImageView
+                android:id="@+id/fav"
+                android:layout_width="34dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="52dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintLeft_toRightOf="@+id/nombre"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/heart"
+                android:layout_marginStart="52dp" />-->
+
+            <ImageView
+                android:id="@+id/img_precio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="169dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintLeft_toRightOf="@+id/img_fecha"
+                app:layout_constraintTop_toBottomOf="@+id/descripcion"
+                app:srcCompat="@mipmap/ic_launcher_round"
+                android:layout_marginStart="169dp" />
+
+            <ImageView
+                android:id="@+id/img_fecha"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="34dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/descripcion"
+                app:srcCompat="@mipmap/ic_launcher_round"
+                android:layout_marginStart="34dp" />
+
+            <EditText
+                android:id="@+id/descripcion"
+                android:layout_width="343dp"
+                android:layout_height="57dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="22dp"
+                android:text="Este evento va a ser la releche!! Anímate y ven"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/fotoEvento"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
+
+            <EditText
+                android:id="@+id/sitio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="33dp"
+                android:layout_marginTop="20dp"
+                android:text="Sevilla, Sevilla"
+                app:layout_constraintLeft_toRightOf="@+id/fotoEvento"
+                app:layout_constraintTop_toBottomOf="@+id/nombre"
+                android:layout_marginStart="33dp" />
+
+            <EditText
+                android:id="@+id/nombre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="35dp"
+                android:layout_marginTop="8dp"
+                android:text="Tablao Flamenco"
+                app:layout_constraintLeft_toRightOf="@+id/fotoEvento"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="35dp" />
+
+            <ImageView
+                android:id="@+id/fotoEvento"
+                android:layout_width="112dp"
+                android:layout_height="103dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait"
+                android:layout_marginStart="8dp" />
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
+
+        <LinearLayout android:orientation="vertical"
+            android:layout_height="300dp"
+            android:layout_width="0dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/cardView"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginStart="8dp"
+            android:id="@+id/linearLayout">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                app:layoutManager="LinearLayoutManager" />
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="add tag" />
-            </LinearLayout>
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <co.lujun.androidtagview.TagContainerLayout
+                        android:id="@+id/tagcontainerLayout1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="0dp"
+                        android:padding="10dp"
+                        app:container_background_color="#00000000"
+                        app:container_border_color="#3300ff00"
+                        app:container_border_radius="0dp"
+                        app:container_border_width="4dp"
+                        app:container_enable_drag="true"
+                        app:horizontal_interval="10dp"
+                        app:tag_clickable="true"
+                        app:tag_enable_cross="true"
+                        app:tag_theme="random"
+                        app:vertical_interval="10dp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <Spinner
+                            android:id="@+id/text_tag"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+
+                        <Button
+                            android:id="@+id/btn_add_tag"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/add" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </ScrollView>
 
         </LinearLayout>
 
-    </ScrollView>
+        <Button
+            android:id="@+id/btn_edit"
+            android:layout_width="88dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/edit"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            android:onClick="editarOwnEvent"/>
+</android.support.constraint.ConstraintLayout>
+    <!-- <LinearLayout android:orientation="vertical"
+            android:layout_height="71dp"
+            android:layout_width="0dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/cardView"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                app:layoutManager="LinearLayoutManager" />
 
-</LinearLayout>
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <co.lujun.androidtagview.TagContainerLayout
+                        android:id="@+id/tagcontainerLayout1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="0dp"
+                        android:padding="10dp"
+                        app:container_enable_drag="true"
+                        app:horizontal_interval="10dp"
+                        app:tag_clickable="true"
+                        app:vertical_interval="10dp"
+                        app:tag_enable_cross="true"
+                        app:container_background_color="#00000000"
+                        app:container_border_color="#3300ff00"
+                        app:container_border_radius="0dp"
+                        app:container_border_width="4dp"
+                        app:tag_theme="random"
+                        />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <Spinner
+                            android:id="@+id/text_tag"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"/>
+
+                        <Button
+                            android:id="@+id/btn_add_tag"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="add tag" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </ScrollView>
+
+        </LinearLayout>-->
 </FrameLayout>
