--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,90 +4,99 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ammacias.tectium.MainActivity">
+    tools:context="com.ammacias.tectium.MainActivity"
+    >
 
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="0dp"
-        android:layout_height="45dp"
-        android:layout_marginRight="59dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="59dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginBottom="57dp"
-        app:layout_constraintBottom_toTopOf="@+id/iniciarSesion"
-        android:hint="@string/password"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="59dp"
-        android:layout_marginEnd="59dp"
-        tools:layout_constraintLeft_creator="1"
-        android:inputType="textPassword"/>
-
-    <EditText
-        android:id="@+id/user"
-        android:layout_width="0dp"
-        android:layout_height="45dp"
-        android:layout_marginBottom="31dp"
-        android:layout_marginLeft="59dp"
-        android:layout_marginRight="59dp"
-        app:layout_constraintBottom_toTopOf="@+id/password"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:hint="@string/user"
-        android:text="anto_albaida@hotmail.com"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="59dp"
-        android:layout_marginEnd="59dp"
-        tools:layout_constraintLeft_creator="1" />
-
-    <Button
-        android:id="@+id/iniciarSesion"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginLeft="59dp"
-        android:layout_marginRight="59dp"
-        android:text="@string/log"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="23dp"
-        app:layout_constraintBottom_toTopOf="@+id/helpLogin"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="59dp"
-        android:layout_marginEnd="59dp"
-        tools:layout_constraintLeft_creator="1" />
-
-    <TextView
-        android:id="@+id/helpLogin"
-        android:layout_width="0dp"
-        android:layout_height="18dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:text="@string/help_login_text"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.588"
-        android:layout_marginBottom="49dp"
-        app:layout_constraintBottom_toTopOf="@+id/login_button"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        tools:layout_constraintLeft_creator="1" />
-
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/login_button"
-        android:layout_width="178dp"
-        android:layout_height="26dp"
-        android:layout_centerInParent="true"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="128dp"
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="324dp"
+        android:layout_height="251dp"
+        android:background="@drawable/shape_rectangle_with_radius"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        tools:layout_editor_absoluteX="30dp"
+        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintVertical_bias="0.503">
+
+
+        <EditText
+            android:id="@+id/user"
+            android:layout_width="270dp"
+            android:layout_height="38dp"
+            android:hint="@string/user"
+            android:text="anto_albaida@hotmail.com"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/textview_login"
+            android:textAlignment="center"
+            tools:layout_editor_absoluteY="30dp"
+            tools:layout_editor_absoluteX="-19dp" />
+
+        <Button
+            android:id="@+id/iniciarSesion"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="59dp"
+            android:layout_marginRight="59dp"
+            android:text="@string/log"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:layout_constraintRight_creator="1"
+            android:layout_marginStart="59dp"
+            android:layout_marginEnd="59dp"
+            tools:layout_constraintLeft_creator="1"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/user"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:background="#4267B2"
+            android:textColor="#FFF"/>
+
+        <TextView
+            android:id="@+id/helpLogin"
+            android:layout_width="217dp"
+            android:layout_height="64dp"
+            android:text="@string/help_login_text"
+            tools:layout_constraintRight_creator="1"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            tools:layout_constraintLeft_creator="1"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="5dp"
+            android:textSize="15dp"
+            app:layout_constraintTop_toBottomOf="@+id/iniciarSesion"
+            android:textColor="#333333"
+            app:layout_constraintHorizontal_bias="0.505" />
+
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/login_button"
+            android:layout_width="178dp"
+            android:layout_height="26dp"
+            android:layout_centerInParent="true"
+            tools:layout_constraintRight_creator="1"
+            tools:layout_constraintBottom_creator="1"
+            tools:layout_constraintLeft_creator="1"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="32dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/helpLogin" />
+    </android.support.constraint.ConstraintLayout>
 
 
 </android.support.constraint.ConstraintLayout>
