--- a/app/src/main/res/layout/fragment_evento_item.xml
+++ b/app/src/main/res/layout/fragment_evento_item.xml
@@ -5,143 +5,142 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="#333333"
-    android:layout_marginBottom="10dp"
-    android:layout_marginTop="10dp">
-
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:background="#FFFF99">
 
     <android.support.v7.widget.CardView
-        android:layout_width="368dp"
+
+        android:id="@+id/cardView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/cardView">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/precio"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:text="TextView"
-            app:layout_constraintLeft_toRightOf="@+id/img_precio"
-            app:layout_constraintTop_toTopOf="@+id/img_precio" />
+            <TextView
+                android:id="@+id/precio"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:text="10€"
+                android:textColor="#000000"
+                android:textSize="17dp"
+                app:layout_constraintLeft_toRightOf="@+id/img_precio"
+                app:layout_constraintTop_toTopOf="@+id/img_precio" />
 
-        <TextView
-            android:id="@+id/fecha"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:text="TextView"
-            app:layout_constraintLeft_toRightOf="@+id/img_fecha"
-            app:layout_constraintTop_toTopOf="@+id/img_fecha" />
+            <TextView
+                android:id="@+id/fecha"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:text="09/09/2017 08:00"
+                android:textColor="#000000"
+                android:textSize="17dp"
+                app:layout_constraintLeft_toRightOf="@+id/img_fecha"
+                app:layout_constraintTop_toTopOf="@+id/img_fecha" />
 
-        <ImageView
-            android:id="@+id/compartir"
-            android:layout_width="34dp"
-            android:layout_height="25dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toRightOf="@+id/fav"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            <ImageView
+                android:id="@+id/compartir"
+                android:layout_width="40dp"
+                android:layout_height="30dp"
+                android:layout_marginRight="24dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/share" />
 
-        <ImageView
-            android:id="@+id/fav"
-            android:layout_width="34dp"
-            android:layout_height="25dp"
-            android:layout_marginLeft="52dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/nombre"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/heart" />
+            <ImageView
+                android:id="@+id/fav"
+                android:layout_width="34dp"
+                android:layout_height="25dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintRight_toLeftOf="@+id/compartir"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/nofav" />
 
-        <ImageView
-            android:id="@+id/img_precio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="169dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/img_fecha"
-            app:layout_constraintTop_toBottomOf="@+id/descripcion"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            <ImageView
+                android:id="@+id/img_precio"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="169dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/img_fecha"
+                app:layout_constraintTop_toBottomOf="@+id/descripcion"
+                app:srcCompat="@drawable/price" />
 
-        <ImageView
-            android:id="@+id/img_fecha"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="34dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/descripcion"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            <ImageView
+                android:id="@+id/img_fecha"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="34dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/descripcion"
+                app:srcCompat="@drawable/hour" />
 
-        <TextView
-            android:id="@+id/descripcion"
-            android:layout_width="343dp"
-            android:layout_height="57dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="22dp"
-            android:text="TextView"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fotoEvento" />
+            <TextView
+                android:id="@+id/descripcion"
+                android:layout_width="343dp"
+                android:layout_height="57dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="24dp"
+                android:ems="2"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/fotoEvento" />
 
-        <TextView
-            android:id="@+id/sitio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="33dp"
-            android:layout_marginTop="20dp"
-            android:text="TextView"
-            app:layout_constraintLeft_toRightOf="@+id/fotoEvento"
-            app:layout_constraintTop_toBottomOf="@+id/nombre" />
+            <TextView
+                android:id="@+id/sitio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="33dp"
+                android:layout_marginTop="8dp"
+                android:text="Sevilla, Sevilla"
+                android:textColor="#000000"
+                android:textSize="17dp"
+                app:layout_constraintLeft_toRightOf="@+id/fotoEvento"
+                app:layout_constraintTop_toBottomOf="@+id/nombre" />
 
-        <TextView
-            android:id="@+id/nombre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="35dp"
-            android:layout_marginTop="8dp"
-            android:text="TextView"
-            app:layout_constraintLeft_toRightOf="@+id/fotoEvento"
-            app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/nombre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="40dp"
+                android:text="Reencuentro"
+                android:textColor="#000000"
+                android:textSize="20dp"
+                app:layout_constraintLeft_toRightOf="@+id/fotoEvento"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/fotoEvento"
-            android:layout_width="112dp"
-            android:layout_height="103dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait" />
+            <ImageView
+                android:id="@+id/fotoEvento"
+                android:layout_width="112dp"
+                android:layout_height="103dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
